--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -19,14 +19,14 @@
         margin: 1rem 0;
       }
 
-      > a {
-        background-color: $red;
-        color: white;
-        padding: 0.5rem 1rem;
-        border-radius: 5px;
-        text-align: center;
-        margin-top: 2rem;
-        float: right;
+      > button {
+          color: black;
+          float: right;
+          background-color: #fff;
+          padding: 0%;
+          border-radius: 5px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        
       }
     }
   }
