--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   overflow-x: hidden;
 
-  > form {
+  > form, >div {
     display: flex;
     flex-direction: column;
     align-items: center;
