--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -49,6 +49,7 @@
     > h5 {
       font-size: 1.8rem;
     }
+
     > p {
       text-transform: uppercase;
       letter-spacing: 2px;
@@ -69,6 +70,13 @@
       }
     }
   }
+}
+.table > *{
+  display: "flex"; 
+  flex-direction:"column"; 
+  margin: "2rem"; 
+  justify-content: "space-around"; 
+  gap:"0.5rem" 
 }
 
 @media screen and (max-width: 600px) {
