--- a/src/styles/shipping.scss
+++ b/src/styles/shipping.scss
@@ -34,7 +34,7 @@
         }
         > input,
         > select {
-          width: 450px;
+          min-width: 450px;
           padding: 0.5rem 1rem;
           outline: none;
           border: 1px solid rgba(0, 0, 0, 0.172);
