--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -76,3 +76,11 @@ a {
     font-size: 2rem;
   }
 }
+
+* > input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]  { 
+    -webkit-appearance: none;
+    appearance: none; 
+    -moz-appearance: textfield;
+}
